@@ -4,7 +4,7 @@
 # Copyright (c) 2008-2009 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: XOpsControl,v 1.17 2009/09/22 20:30:53 andreas_kupries Exp $
+# RCS: @(#) $Id: XOpsControl,v 1.18 2009/09/22 22:52:33 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -41,6 +41,7 @@ source ${SELF}/ops/bellmanford.test  ; # Distances by Bellman-Ford
 source ${SELF}/ops/bfs.test          ; # Breadth-First Searching.
 source ${SELF}/ops/busackergowen.test; # Minimum-Cost Maximum-Flow by Busacker-Gowen
 source ${SELF}/ops/christofides.test ; # mTSP by Christofides, 3/2-approximation algorithm
+source ${SELF}/ops/dinicblockingflow.test ; # Blocking-Flow by Dinic
 source ${SELF}/ops/edmondskarp.test  ; # Maximum-Flow by Edmonds-Karp
 source ${SELF}/ops/floydwarshall.test; # Distances by Floyd-Warshall
 source ${SELF}/ops/johnsons.test     ; # Distances by Johnsons
